static/css/style.css
/* ... */
:root {
  color-scheme: light;

  /* set defaults */
  --brand: var(--brand-light);
  --brand-rgb: var(--brand-rgb-light);
  --text1: var(--text1-light);
  --text2: var(--text2-light);
  --surface1: var(--surface1-light);
  --surface2: var(--surface2-light);
  --surface3: var(--surface3-light);
  --shadow-color: var(--surface-shadow-light);
  --shadow-strength: var(--shadow-strength-light);

  --spacing0: 0.2rem;
  --spacing1: 0.4rem;
  --spacing2: 0.6rem;
  --spacing3: 1rem;
  --spacing4: 1.4rem;

  --max-padding: 10rem;
  --corner-roundness1: 0.25rem;
  --corner-roundness2: var(--spacing2);
}

@media (prefers-color-scheme: dark) {
  :root {
    color-scheme: dark;

    --brand: var(--brand-dark);
    --brand-rgb: var(--brand-rgb-dark);
    --text1: var(--text1-dark);
    --text2: var(--text2-dark);
    --surface1: var(--surface1-dark);
    --surface2: var(--surface2-dark);
    --surface3: var(--surface3-dark);
    --shadow-color: var(--surface-shadow-dark);
    --shadow-strength: var(--shadow-strength-dark);
  }
}

[color-scheme="light"] {
  color-scheme: light;

  --brand: var(--brand-light);
  --brand-rgb: var(--brand-rgb-light);
  --text1: var(--text1-light);
  --text2: var(--text2-light);
  --surface1: var(--surface1-light);
  --surface2: var(--surface2-light);
  --surface3: var(--surface3-light);
  --shadow-color: var(--surface-shadow-light);
  --shadow-strength: var(--shadow-strength-light);
}

[color-scheme="dark"] {
  color-scheme: dark;

  --brand: var(--brand-dark);
  --brand-rgb: var(--brand-rgb-dark);
  --text1: var(--text1-dark);
  --text2: var(--text2-dark);
  --surface1: var(--surface1-dark);
  --surface2: var(--surface2-dark);
  --surface3: var(--surface3-dark);
  --shadow-color: var(--surface-shadow-dark);
  --shadow-strength: var(--shadow-strength-dark);
}

/*
  CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

html,
body {
  height: 100%;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* Utility Classes */
.flow > * + * {
  margin-top: 1em;
}

.space-between {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.column {
  flex-direction: column;
}

.hidden {
  display: none;
}

/* Page Structure */
body {
  display: grid;
  align-items: start;
  grid-template-columns: clamp(var(--spacing3), 5%, var(--max-padding)) 1fr 3fr clamp(var(--spacing3), 5%, var(--max-padding));
  grid-template-rows: min-content min-content min-content auto min-content;
  grid-template-areas:
    ". header  header ."
    ". nav     nav    ."
    ". sidebar main   ."
    ". .       main   ."
    "footer footer footer footer";
  gap: var(--spacing3);
}

.pla-header {
  padding-top: var(--spacing4);
  grid-area: header;
}

.pla-main {
  grid-area: main;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: var(--spacing3);
}

.pla-nav {
  grid-area: nav;
}

.pla-sidebar {
  grid-area: sidebar;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: var(--spacing3);
}

.pla-footer {
  grid-area: footer;
}

/* Block Styles */
html {
  accent-color: var(--brand);
}

body {
  font-size: 16px;
  font-family: "Lato", sans-serif;
  line-height: 1.5;
  color: var(--text1);
  background-color: var(--surface3);
}

section {
  background-color: var(--surface2);
  border-radius: var(--corner-roundness2);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  padding: var(--spacing3) var(--spacing4);
  box-shadow: var(--shadow-4);
}

.pla-sidebar section {
  gap: var(--spacing2);
}

.pla-control {
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.pla-control-spaced {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.pla-control-actions {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  margin: var(--spacing2) 0 var(--spacing0);
  gap: var(--spacing2);
}

.icons {
  width: 50px;
  height: 50px;
}

/* Inputs */
input[type="checkbox"] {
  padding: var(--spacing1);
}

input[type="text"], select {
  color: var(--text1);
  background-color: var(--surface3);
  padding: var(--spacing1) var(--spacing2);
  border: 2px solid var(--surface3);
  border-radius: var(--corner-roundness1);
}

[color-scheme="light"] input[type="text"],
[color-scheme="light"] select {
  border: 2px solid var(--gray-5);
}

input[type="text"]:active,
input[type="text"]:focus,
input[type="text"]:focus-visible {
  outline-color: var(--brand);
  border-color: var(--brand);
}

/* Header */
.pla-heading {
  font-size: 2rem;
  font-weight: 700;
}

.pla-heading-highlight {
  font-size: 2.15rem;
  font-weight: 800;
  background: -webkit-linear-gradient(var(--blue-1), var(--blue-2));
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* Nav bar */
.pla-nav {
  background-color: var(--surface3);
  border-radius: var(--corner-roundness2);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  padding: 0 var(--spacing4);
  box-shadow: var(--shadow-4);
}

[color-scheme="dark"] .pla-nav {
  background-color: var(--surface2)
}

.pla-nav ul {
  padding: 0;
  display: flex;
  justify-content: space-evenly;
}

.pla-nav li {
  list-style-type: none;
}

.pla-nav a {
  text-align: center;
  width: 15ch;
  display: block;
  text-transform: uppercase;
  text-decoration: none;
  color: var(--brand);
  padding: var(--spacing2);
}

.pla-nav a:hover, .pla-nav a:focus {
  color: var(--surface2);
  background-color: var(--brand);
}

.pla-nav a:active {
  color: var(--surface2);
  background: linear-gradient(
    rgba(var(--blue-1-rgb), 0.6),
    rgba(var(--blue-2-rgb), 0.6)
  );
}

/* Footer */
.pla-footer {
  text-align: center;
  padding: var(--spacing3);
}
/* ... */

